0026572: Error in ShapeUpgrade_UnifySameDomain algorithm: can not merge two edges in customer's shape

Obsolete code deleted.
Test case for issue CR26572
Small correction